samples/_failures_safe/1761319684_53ad11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_910e2b6f.c: In function ‘print_state’:
./samples/SAFE/__tmp_910e2b6f.c:160:5: error: expected expression at end of input
  160 |     if (state >=
      |     ^~
./samples/SAFE/__tmp_910e2b6f.c:160:5: error: expected declaration or statement at end of input
